// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appointment AppointmentContent should match snapshot when has appointments 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
       
      <div
        class="controls-container"
      >
        <div
          class="controls-title-wrapper"
        >
          <h2
            class="el-has-bold-text el-subtitle"
          >
            Location
          </h2>
          <div
            class="tab-mode-button-container"
          >
            <button
              class="el-intent-primary el-button"
            >
              MAP
              <div
                class="el-button-loader"
              />
            </button>
          </div>
        </div>
        <div
          class="my-location-wrap"
        >
          <div
            class="my-location-inner-wrap"
          >
            <div
              class="my-location-section"
            >
              <input
                class="el-input"
                placeholder="Enter location"
                value=""
              />
            </div>
            <div
              class="destination-location-section"
            />
          </div>
        </div>
      </div>
      <div
        class="appointment-time-container-expanded appointment-time-container"
      >
        <div
          class="el-toggle-full-width el-toggle-radio-wrap"
        >
          <input
            checked=""
            class="el-toggle-radio"
            id="today"
            name="appointment-time"
            type="radio"
            value="TODAY"
          />
          <label
            class="el-toggle-full-width el-toggle-radio-label"
            for="today"
          >
            <span
              class="el-toggle-radio-item"
            >
              Today
            </span>
          </label>
          <input
            class="el-toggle-radio"
            id="tomorrow"
            name="appointment-time"
            type="radio"
            value="TOMORROW"
          />
          <label
            class="el-toggle-full-width el-toggle-radio-label"
            for="tomorrow"
          >
            <span
              class="el-toggle-radio-item"
            >
              Tomorrow
            </span>
          </label>
          <input
            class="el-toggle-radio"
            id="week"
            name="appointment-time"
            type="radio"
            value="WEEK"
          />
          <label
            class="el-toggle-full-width el-toggle-radio-label"
            for="week"
          >
            <span
              class="el-toggle-radio-item"
            >
              Week
            </span>
          </label>
        </div>
      </div>
      <div
        class="mobile-appointments-show appoinment-container"
      >
        <div
          class="el-fade-in"
        >
          <div>
            <div
              class="cancelled-tile el-mb6 el-card-wrap"
            >
              <div
                class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
              >
                <h5
                  class="el-card-list-heading"
                >
                  undefined - undefined - Cancelled 
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                >
                  Appointment
                </h6>
              </div>
            </div>
          </div>
          <div>
            <div
              class="cancelled-tile el-mb6 el-card-wrap"
            >
              <div
                class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
              >
                <h5
                  class="el-card-list-heading"
                >
                  undefined - undefined - Cancelled 
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                >
                  Viewing
                </h6>
              </div>
            </div>
          </div>
          <div>
            <div
              class="el-mb6 el-card-wrap"
            >
              <div
                class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
              >
                <div
                  class="el-card-context-menu-wrapper"
                >
                  <div
                    class="el-card-context-menu-toggle"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-items"
                  >
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                  </div>
                </div>
                <h5
                  class="el-card-list-heading"
                >
                  undefined - undefined
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                >
                  Viewing
                </h6>
              </div>
              <div
                class="el-card-list-item-expanded el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Property
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Yew Tree Cottage Church Walk
                  </div>
                </div>
              </div>
              <div
                class="el-card-list-item-expanded el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Attendee
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Ms Harper Dale
                  </div>
                </div>
              </div>
              <div
                class="el-card-list-item-expanded el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Attendee
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Mr Teddy Allan
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="el-mb6 el-card-wrap"
            >
              <div
                class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
              >
                <div
                  class="el-card-context-menu-wrapper"
                >
                  <div
                    class="el-card-context-menu-toggle"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-items"
                  >
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                  </div>
                </div>
                <h5
                  class="el-card-list-heading"
                >
                  undefined - undefined
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                >
                  Viewing
                </h6>
              </div>
              <div
                class="el-card-list-item-expanded el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Property
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Belmont Hanover Farm
                  </div>
                </div>
              </div>
              <div
                class="el-card-list-item-expanded el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Attendee
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Mr Ronnie Akhtar
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="el-mb6 el-card-wrap"
            >
              <div
                class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
              >
                <div
                  class="el-card-context-menu-wrapper"
                >
                  <div
                    class="el-card-context-menu-toggle"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-items"
                  >
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                  </div>
                </div>
                <h5
                  class="el-card-list-heading"
                >
                  undefined - undefined
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                >
                  Viewing
                </h6>
              </div>
              <div
                class="el-card-list-item-expanded el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Property
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    78 Wadworth Holme
                  </div>
                </div>
              </div>
              <div
                class="el-card-list-item-expanded el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Attendee
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Ms Poppy Beggs
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="el-mb6 el-card-wrap"
            >
              <div
                class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
              >
                <div
                  class="el-card-context-menu-wrapper"
                >
                  <div
                    class="el-card-context-menu-toggle"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-items"
                  >
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                  </div>
                </div>
                <h5
                  class="el-card-list-heading"
                >
                  undefined - undefined
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                >
                  Viewing
                </h6>
              </div>
              <div
                class="el-card-list-item-expanded el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Property
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Sunnyside St. Rumbolds Lane
                  </div>
                </div>
              </div>
              <div
                class="el-card-list-item-expanded el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Attendee
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Mr Elijah Brown
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="el-mb6 el-card-wrap"
            >
              <div
                class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
              >
                <div
                  class="el-card-context-menu-wrapper"
                >
                  <div
                    class="el-card-context-menu-toggle"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-items"
                  >
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                  </div>
                </div>
                <h5
                  class="el-card-list-heading"
                >
                  undefined - undefined
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                >
                  Appointment
                </h6>
              </div>
              <div
                class="el-card-list-item-expanded el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Attendee
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Mr Jenson Brown
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="el-mb6 el-card-wrap"
            >
              <div
                class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
              >
                <div
                  class="el-card-context-menu-wrapper"
                >
                  <div
                    class="el-card-context-menu-toggle"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-items"
                  >
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                    <div
                      class="el-card-context-menu-item"
                    >
                      <span
                        class="el-icon"
                        style="font-size: 1.25rem;"
                      >
                        <svg />
                      </span>
                    </div>
                  </div>
                </div>
                <h5
                  class="el-card-list-heading"
                >
                  undefined - undefined
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                >
                  Viewing
                </h6>
              </div>
              <div
                class="el-card-list-item-expanded el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Property
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    90 Bromham Road
                  </div>
                </div>
              </div>
              <div
                class="el-card-list-item-expanded el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Attendee
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Mr Colton Jackson
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="drawer-bg"
      />
      <div
        class="drawer"
      />
      <div
        class="map-container"
      >
        <div
          class="map-content-container"
        />
        <div
          class="map-panel-container"
        >
          <div
            class="map-panel-item"
          >
            <input
              checked=""
              class="toggle-travel-checkbox"
              id="travel-mode"
              type="checkbox"
            />
            <label
              class="toggle-travel-label"
              for="travel-mode"
            >
              <img
                src="[object Object]"
              />
              <img
                src="[object Object]"
              />
            </label>
          </div>
          <div
            class="map-panel-item"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              ETA
            </h2>
            <p />
          </div>
          <div
            class="map-panel-item"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              Distance
            </h2>
            <p />
          </div>
          <div
            class="map-panel-item"
          >
            <button
              class="el-intent-critical el-button"
              type="button"
            >
              Start Journey
              <div
                class="el-button-loader"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
     
    <div
      class="controls-container"
    >
      <div
        class="controls-title-wrapper"
      >
        <h2
          class="el-has-bold-text el-subtitle"
        >
          Location
        </h2>
        <div
          class="tab-mode-button-container"
        >
          <button
            class="el-intent-primary el-button"
          >
            MAP
            <div
              class="el-button-loader"
            />
          </button>
        </div>
      </div>
      <div
        class="my-location-wrap"
      >
        <div
          class="my-location-inner-wrap"
        >
          <div
            class="my-location-section"
          >
            <input
              class="el-input"
              placeholder="Enter location"
              value=""
            />
          </div>
          <div
            class="destination-location-section"
          />
        </div>
      </div>
    </div>
    <div
      class="appointment-time-container-expanded appointment-time-container"
    >
      <div
        class="el-toggle-full-width el-toggle-radio-wrap"
      >
        <input
          checked=""
          class="el-toggle-radio"
          id="today"
          name="appointment-time"
          type="radio"
          value="TODAY"
        />
        <label
          class="el-toggle-full-width el-toggle-radio-label"
          for="today"
        >
          <span
            class="el-toggle-radio-item"
          >
            Today
          </span>
        </label>
        <input
          class="el-toggle-radio"
          id="tomorrow"
          name="appointment-time"
          type="radio"
          value="TOMORROW"
        />
        <label
          class="el-toggle-full-width el-toggle-radio-label"
          for="tomorrow"
        >
          <span
            class="el-toggle-radio-item"
          >
            Tomorrow
          </span>
        </label>
        <input
          class="el-toggle-radio"
          id="week"
          name="appointment-time"
          type="radio"
          value="WEEK"
        />
        <label
          class="el-toggle-full-width el-toggle-radio-label"
          for="week"
        >
          <span
            class="el-toggle-radio-item"
          >
            Week
          </span>
        </label>
      </div>
    </div>
    <div
      class="mobile-appointments-show appoinment-container"
    >
      <div
        class="el-fade-in"
      >
        <div>
          <div
            class="cancelled-tile el-mb6 el-card-wrap"
          >
            <div
              class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
            >
              <h5
                class="el-card-list-heading"
              >
                undefined - undefined - Cancelled 
              </h5>
              <h6
                class="el-card-list-sub-heading"
              >
                Appointment
              </h6>
            </div>
          </div>
        </div>
        <div>
          <div
            class="cancelled-tile el-mb6 el-card-wrap"
          >
            <div
              class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
            >
              <h5
                class="el-card-list-heading"
              >
                undefined - undefined - Cancelled 
              </h5>
              <h6
                class="el-card-list-sub-heading"
              >
                Viewing
              </h6>
            </div>
          </div>
        </div>
        <div>
          <div
            class="el-mb6 el-card-wrap"
          >
            <div
              class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
            >
              <div
                class="el-card-context-menu-wrapper"
              >
                <div
                  class="el-card-context-menu-toggle"
                >
                  <span
                    class="el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-context-menu-items"
                >
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                </div>
              </div>
              <h5
                class="el-card-list-heading"
              >
                undefined - undefined
              </h5>
              <h6
                class="el-card-list-sub-heading"
              >
                Viewing
              </h6>
            </div>
            <div
              class="el-card-list-item-expanded el-card-list-item"
            >
              <div
                class="el-card-list-icon"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </div>
              <div
                class="el-card-list-item-text-wrap"
              >
                <div
                  class="el-card-list-item-text-primary"
                >
                  Property
                </div>
                <div
                  class="el-card-list-item-text-secondary"
                >
                  Yew Tree Cottage Church Walk
                </div>
              </div>
            </div>
            <div
              class="el-card-list-item-expanded el-card-list-item"
            >
              <div
                class="el-card-list-icon"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </div>
              <div
                class="el-card-list-item-text-wrap"
              >
                <div
                  class="el-card-list-item-text-primary"
                >
                  Attendee
                </div>
                <div
                  class="el-card-list-item-text-secondary"
                >
                  Ms Harper Dale
                </div>
              </div>
            </div>
            <div
              class="el-card-list-item-expanded el-card-list-item"
            >
              <div
                class="el-card-list-icon"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </div>
              <div
                class="el-card-list-item-text-wrap"
              >
                <div
                  class="el-card-list-item-text-primary"
                >
                  Attendee
                </div>
                <div
                  class="el-card-list-item-text-secondary"
                >
                  Mr Teddy Allan
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="el-mb6 el-card-wrap"
          >
            <div
              class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
            >
              <div
                class="el-card-context-menu-wrapper"
              >
                <div
                  class="el-card-context-menu-toggle"
                >
                  <span
                    class="el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-context-menu-items"
                >
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                </div>
              </div>
              <h5
                class="el-card-list-heading"
              >
                undefined - undefined
              </h5>
              <h6
                class="el-card-list-sub-heading"
              >
                Viewing
              </h6>
            </div>
            <div
              class="el-card-list-item-expanded el-card-list-item"
            >
              <div
                class="el-card-list-icon"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </div>
              <div
                class="el-card-list-item-text-wrap"
              >
                <div
                  class="el-card-list-item-text-primary"
                >
                  Property
                </div>
                <div
                  class="el-card-list-item-text-secondary"
                >
                  Belmont Hanover Farm
                </div>
              </div>
            </div>
            <div
              class="el-card-list-item-expanded el-card-list-item"
            >
              <div
                class="el-card-list-icon"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </div>
              <div
                class="el-card-list-item-text-wrap"
              >
                <div
                  class="el-card-list-item-text-primary"
                >
                  Attendee
                </div>
                <div
                  class="el-card-list-item-text-secondary"
                >
                  Mr Ronnie Akhtar
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="el-mb6 el-card-wrap"
          >
            <div
              class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
            >
              <div
                class="el-card-context-menu-wrapper"
              >
                <div
                  class="el-card-context-menu-toggle"
                >
                  <span
                    class="el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-context-menu-items"
                >
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                </div>
              </div>
              <h5
                class="el-card-list-heading"
              >
                undefined - undefined
              </h5>
              <h6
                class="el-card-list-sub-heading"
              >
                Viewing
              </h6>
            </div>
            <div
              class="el-card-list-item-expanded el-card-list-item"
            >
              <div
                class="el-card-list-icon"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </div>
              <div
                class="el-card-list-item-text-wrap"
              >
                <div
                  class="el-card-list-item-text-primary"
                >
                  Property
                </div>
                <div
                  class="el-card-list-item-text-secondary"
                >
                  78 Wadworth Holme
                </div>
              </div>
            </div>
            <div
              class="el-card-list-item-expanded el-card-list-item"
            >
              <div
                class="el-card-list-icon"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </div>
              <div
                class="el-card-list-item-text-wrap"
              >
                <div
                  class="el-card-list-item-text-primary"
                >
                  Attendee
                </div>
                <div
                  class="el-card-list-item-text-secondary"
                >
                  Ms Poppy Beggs
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="el-mb6 el-card-wrap"
          >
            <div
              class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
            >
              <div
                class="el-card-context-menu-wrapper"
              >
                <div
                  class="el-card-context-menu-toggle"
                >
                  <span
                    class="el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-context-menu-items"
                >
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                </div>
              </div>
              <h5
                class="el-card-list-heading"
              >
                undefined - undefined
              </h5>
              <h6
                class="el-card-list-sub-heading"
              >
                Viewing
              </h6>
            </div>
            <div
              class="el-card-list-item-expanded el-card-list-item"
            >
              <div
                class="el-card-list-icon"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </div>
              <div
                class="el-card-list-item-text-wrap"
              >
                <div
                  class="el-card-list-item-text-primary"
                >
                  Property
                </div>
                <div
                  class="el-card-list-item-text-secondary"
                >
                  Sunnyside St. Rumbolds Lane
                </div>
              </div>
            </div>
            <div
              class="el-card-list-item-expanded el-card-list-item"
            >
              <div
                class="el-card-list-icon"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </div>
              <div
                class="el-card-list-item-text-wrap"
              >
                <div
                  class="el-card-list-item-text-primary"
                >
                  Attendee
                </div>
                <div
                  class="el-card-list-item-text-secondary"
                >
                  Mr Elijah Brown
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="el-mb6 el-card-wrap"
          >
            <div
              class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
            >
              <div
                class="el-card-context-menu-wrapper"
              >
                <div
                  class="el-card-context-menu-toggle"
                >
                  <span
                    class="el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-context-menu-items"
                >
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                </div>
              </div>
              <h5
                class="el-card-list-heading"
              >
                undefined - undefined
              </h5>
              <h6
                class="el-card-list-sub-heading"
              >
                Appointment
              </h6>
            </div>
            <div
              class="el-card-list-item-expanded el-card-list-item"
            >
              <div
                class="el-card-list-icon"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </div>
              <div
                class="el-card-list-item-text-wrap"
              >
                <div
                  class="el-card-list-item-text-primary"
                >
                  Attendee
                </div>
                <div
                  class="el-card-list-item-text-secondary"
                >
                  Mr Jenson Brown
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="el-mb6 el-card-wrap"
          >
            <div
              class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
            >
              <div
                class="el-card-context-menu-wrapper"
              >
                <div
                  class="el-card-context-menu-toggle"
                >
                  <span
                    class="el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-context-menu-items"
                >
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-context-menu-item"
                  >
                    <span
                      class="el-icon"
                      style="font-size: 1.25rem;"
                    >
                      <svg />
                    </span>
                  </div>
                </div>
              </div>
              <h5
                class="el-card-list-heading"
              >
                undefined - undefined
              </h5>
              <h6
                class="el-card-list-sub-heading"
              >
                Viewing
              </h6>
            </div>
            <div
              class="el-card-list-item-expanded el-card-list-item"
            >
              <div
                class="el-card-list-icon"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </div>
              <div
                class="el-card-list-item-text-wrap"
              >
                <div
                  class="el-card-list-item-text-primary"
                >
                  Property
                </div>
                <div
                  class="el-card-list-item-text-secondary"
                >
                  90 Bromham Road
                </div>
              </div>
            </div>
            <div
              class="el-card-list-item-expanded el-card-list-item"
            >
              <div
                class="el-card-list-icon"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </div>
              <div
                class="el-card-list-item-text-wrap"
              >
                <div
                  class="el-card-list-item-text-primary"
                >
                  Attendee
                </div>
                <div
                  class="el-card-list-item-text-secondary"
                >
                  Mr Colton Jackson
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="drawer-bg"
    />
    <div
      class="drawer"
    />
    <div
      class="map-container"
    >
      <div
        class="map-content-container"
      />
      <div
        class="map-panel-container"
      >
        <div
          class="map-panel-item"
        >
          <input
            checked=""
            class="toggle-travel-checkbox"
            id="travel-mode"
            type="checkbox"
          />
          <label
            class="toggle-travel-label"
            for="travel-mode"
          >
            <img
              src="[object Object]"
            />
            <img
              src="[object Object]"
            />
          </label>
        </div>
        <div
          class="map-panel-item"
        >
          <h2
            class="el-has-bold-text el-subtitle"
          >
            ETA
          </h2>
          <p />
        </div>
        <div
          class="map-panel-item"
        >
          <h2
            class="el-has-bold-text el-subtitle"
          >
            Distance
          </h2>
          <p />
        </div>
        <div
          class="map-panel-item"
        >
          <button
            class="el-intent-critical el-button"
            type="button"
          >
            Start Journey
            <div
              class="el-button-loader"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`appointment AppointmentContent should match snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
       
      <div
        class="controls-container"
      >
        <div
          class="controls-title-wrapper"
        >
          <h2
            class="el-has-bold-text el-subtitle"
          >
            Location
          </h2>
          <div
            class="tab-mode-button-container"
          >
            <button
              class="el-intent-primary el-button"
            >
              MAP
              <div
                class="el-button-loader"
              />
            </button>
          </div>
        </div>
        <div
          class="my-location-wrap"
        >
          <div
            class="my-location-inner-wrap"
          >
            <div
              class="my-location-section"
            >
              <input
                class="el-input"
                placeholder="Enter location"
                value=""
              />
            </div>
            <div
              class="destination-location-section"
            />
          </div>
        </div>
      </div>
      <div
        class="appointment-time-container-expanded appointment-time-container"
      >
        <div
          class="el-toggle-full-width el-toggle-radio-wrap"
        >
          <input
            checked=""
            class="el-toggle-radio"
            id="today"
            name="appointment-time"
            type="radio"
            value="TODAY"
          />
          <label
            class="el-toggle-full-width el-toggle-radio-label"
            for="today"
          >
            <span
              class="el-toggle-radio-item"
            >
              Today
            </span>
          </label>
          <input
            class="el-toggle-radio"
            id="tomorrow"
            name="appointment-time"
            type="radio"
            value="TOMORROW"
          />
          <label
            class="el-toggle-full-width el-toggle-radio-label"
            for="tomorrow"
          >
            <span
              class="el-toggle-radio-item"
            >
              Tomorrow
            </span>
          </label>
          <input
            class="el-toggle-radio"
            id="week"
            name="appointment-time"
            type="radio"
            value="WEEK"
          />
          <label
            class="el-toggle-full-width el-toggle-radio-label"
            for="week"
          >
            <span
              class="el-toggle-radio-item"
            >
              Week
            </span>
          </label>
        </div>
      </div>
      <div
        class="mobile-appointments-show appoinment-container"
      >
        <div
          class="loading-container"
        >
          <div
            class="el-loader-container"
          >
            <div
              class="el-loader"
            >
              <div
                class="el-loader-moving-bar"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="drawer-bg"
      />
      <div
        class="drawer"
      />
      <div
        class="map-container"
      >
        <div
          class="map-content-container"
        />
        <div
          class="map-panel-container"
        >
          <div
            class="map-panel-item"
          >
            <input
              checked=""
              class="toggle-travel-checkbox"
              id="travel-mode"
              type="checkbox"
            />
            <label
              class="toggle-travel-label"
              for="travel-mode"
            >
              <img
                src="[object Object]"
              />
              <img
                src="[object Object]"
              />
            </label>
          </div>
          <div
            class="map-panel-item"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              ETA
            </h2>
            <p />
          </div>
          <div
            class="map-panel-item"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              Distance
            </h2>
            <p />
          </div>
          <div
            class="map-panel-item"
          >
            <button
              class="el-intent-critical el-button"
              type="button"
            >
              Start Journey
              <div
                class="el-button-loader"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
     
    <div
      class="controls-container"
    >
      <div
        class="controls-title-wrapper"
      >
        <h2
          class="el-has-bold-text el-subtitle"
        >
          Location
        </h2>
        <div
          class="tab-mode-button-container"
        >
          <button
            class="el-intent-primary el-button"
          >
            MAP
            <div
              class="el-button-loader"
            />
          </button>
        </div>
      </div>
      <div
        class="my-location-wrap"
      >
        <div
          class="my-location-inner-wrap"
        >
          <div
            class="my-location-section"
          >
            <input
              class="el-input"
              placeholder="Enter location"
              value=""
            />
          </div>
          <div
            class="destination-location-section"
          />
        </div>
      </div>
    </div>
    <div
      class="appointment-time-container-expanded appointment-time-container"
    >
      <div
        class="el-toggle-full-width el-toggle-radio-wrap"
      >
        <input
          checked=""
          class="el-toggle-radio"
          id="today"
          name="appointment-time"
          type="radio"
          value="TODAY"
        />
        <label
          class="el-toggle-full-width el-toggle-radio-label"
          for="today"
        >
          <span
            class="el-toggle-radio-item"
          >
            Today
          </span>
        </label>
        <input
          class="el-toggle-radio"
          id="tomorrow"
          name="appointment-time"
          type="radio"
          value="TOMORROW"
        />
        <label
          class="el-toggle-full-width el-toggle-radio-label"
          for="tomorrow"
        >
          <span
            class="el-toggle-radio-item"
          >
            Tomorrow
          </span>
        </label>
        <input
          class="el-toggle-radio"
          id="week"
          name="appointment-time"
          type="radio"
          value="WEEK"
        />
        <label
          class="el-toggle-full-width el-toggle-radio-label"
          for="week"
        >
          <span
            class="el-toggle-radio-item"
          >
            Week
          </span>
        </label>
      </div>
    </div>
    <div
      class="mobile-appointments-show appoinment-container"
    >
      <div
        class="loading-container"
      >
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="drawer-bg"
    />
    <div
      class="drawer"
    />
    <div
      class="map-container"
    >
      <div
        class="map-content-container"
      />
      <div
        class="map-panel-container"
      >
        <div
          class="map-panel-item"
        >
          <input
            checked=""
            class="toggle-travel-checkbox"
            id="travel-mode"
            type="checkbox"
          />
          <label
            class="toggle-travel-label"
            for="travel-mode"
          >
            <img
              src="[object Object]"
            />
            <img
              src="[object Object]"
            />
          </label>
        </div>
        <div
          class="map-panel-item"
        >
          <h2
            class="el-has-bold-text el-subtitle"
          >
            ETA
          </h2>
          <p />
        </div>
        <div
          class="map-panel-item"
        >
          <h2
            class="el-has-bold-text el-subtitle"
          >
            Distance
          </h2>
          <p />
        </div>
        <div
          class="map-panel-item"
        >
          <button
            class="el-intent-critical el-button"
            type="button"
          >
            Start Journey
            <div
              class="el-button-loader"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`appointment Apppointment should match snapshot with an empty query 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
       
      <div
        class="controls-container"
      >
        <div
          class="controls-title-wrapper"
        >
          <h2
            class="el-has-bold-text el-subtitle"
          >
            Location
          </h2>
          <div
            class="tab-mode-button-container"
          >
            <button
              class="el-intent-primary el-button"
            >
              MAP
              <div
                class="el-button-loader"
              />
            </button>
          </div>
        </div>
        <div
          class="my-location-wrap"
        >
          <div
            class="my-location-inner-wrap"
          >
            <div
              class="my-location-section"
            >
              <input
                class="el-input"
                placeholder="Enter location"
                value=""
              />
            </div>
            <div
              class="destination-location-section"
            />
          </div>
        </div>
      </div>
      <div
        class="appointment-time-container-expanded appointment-time-container"
      >
        <div
          class="el-toggle-full-width el-toggle-radio-wrap"
        >
          <input
            checked=""
            class="el-toggle-radio"
            id="today"
            name="appointment-time"
            type="radio"
            value="TODAY"
          />
          <label
            class="el-toggle-full-width el-toggle-radio-label"
            for="today"
          >
            <span
              class="el-toggle-radio-item"
            >
              Today
            </span>
          </label>
          <input
            class="el-toggle-radio"
            id="tomorrow"
            name="appointment-time"
            type="radio"
            value="TOMORROW"
          />
          <label
            class="el-toggle-full-width el-toggle-radio-label"
            for="tomorrow"
          >
            <span
              class="el-toggle-radio-item"
            >
              Tomorrow
            </span>
          </label>
          <input
            class="el-toggle-radio"
            id="week"
            name="appointment-time"
            type="radio"
            value="WEEK"
          />
          <label
            class="el-toggle-full-width el-toggle-radio-label"
            for="week"
          >
            <span
              class="el-toggle-radio-item"
            >
              Week
            </span>
          </label>
        </div>
      </div>
      <div
        class="mobile-appointments-show appoinment-container"
      >
        <div
          class="el-fade-in"
        >
          <div
            class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-pn-content"
            >
              No appointments
            </div>
          </div>
        </div>
      </div>
      <div
        class="drawer-bg"
      />
      <div
        class="drawer"
      />
      <div
        class="map-container"
      >
        <div
          class="map-content-container"
        />
        <div
          class="map-panel-container"
        >
          <div
            class="map-panel-item"
          >
            <input
              checked=""
              class="toggle-travel-checkbox"
              id="travel-mode"
              type="checkbox"
            />
            <label
              class="toggle-travel-label"
              for="travel-mode"
            >
              <img
                src="[object Object]"
              />
              <img
                src="[object Object]"
              />
            </label>
          </div>
          <div
            class="map-panel-item"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              ETA
            </h2>
            <p />
          </div>
          <div
            class="map-panel-item"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              Distance
            </h2>
            <p />
          </div>
          <div
            class="map-panel-item"
          >
            <button
              class="el-intent-critical el-button"
              type="button"
            >
              Start Journey
              <div
                class="el-button-loader"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
     
    <div
      class="controls-container"
    >
      <div
        class="controls-title-wrapper"
      >
        <h2
          class="el-has-bold-text el-subtitle"
        >
          Location
        </h2>
        <div
          class="tab-mode-button-container"
        >
          <button
            class="el-intent-primary el-button"
          >
            MAP
            <div
              class="el-button-loader"
            />
          </button>
        </div>
      </div>
      <div
        class="my-location-wrap"
      >
        <div
          class="my-location-inner-wrap"
        >
          <div
            class="my-location-section"
          >
            <input
              class="el-input"
              placeholder="Enter location"
              value=""
            />
          </div>
          <div
            class="destination-location-section"
          />
        </div>
      </div>
    </div>
    <div
      class="appointment-time-container-expanded appointment-time-container"
    >
      <div
        class="el-toggle-full-width el-toggle-radio-wrap"
      >
        <input
          checked=""
          class="el-toggle-radio"
          id="today"
          name="appointment-time"
          type="radio"
          value="TODAY"
        />
        <label
          class="el-toggle-full-width el-toggle-radio-label"
          for="today"
        >
          <span
            class="el-toggle-radio-item"
          >
            Today
          </span>
        </label>
        <input
          class="el-toggle-radio"
          id="tomorrow"
          name="appointment-time"
          type="radio"
          value="TOMORROW"
        />
        <label
          class="el-toggle-full-width el-toggle-radio-label"
          for="tomorrow"
        >
          <span
            class="el-toggle-radio-item"
          >
            Tomorrow
          </span>
        </label>
        <input
          class="el-toggle-radio"
          id="week"
          name="appointment-time"
          type="radio"
          value="WEEK"
        />
        <label
          class="el-toggle-full-width el-toggle-radio-label"
          for="week"
        >
          <span
            class="el-toggle-radio-item"
          >
            Week
          </span>
        </label>
      </div>
    </div>
    <div
      class="mobile-appointments-show appoinment-container"
    >
      <div
        class="el-fade-in"
      >
        <div
          class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            No appointments
          </div>
        </div>
      </div>
    </div>
    <div
      class="drawer-bg"
    />
    <div
      class="drawer"
    />
    <div
      class="map-container"
    >
      <div
        class="map-content-container"
      />
      <div
        class="map-panel-container"
      >
        <div
          class="map-panel-item"
        >
          <input
            checked=""
            class="toggle-travel-checkbox"
            id="travel-mode"
            type="checkbox"
          />
          <label
            class="toggle-travel-label"
            for="travel-mode"
          >
            <img
              src="[object Object]"
            />
            <img
              src="[object Object]"
            />
          </label>
        </div>
        <div
          class="map-panel-item"
        >
          <h2
            class="el-has-bold-text el-subtitle"
          >
            ETA
          </h2>
          <p />
        </div>
        <div
          class="map-panel-item"
        >
          <h2
            class="el-has-bold-text el-subtitle"
          >
            Distance
          </h2>
          <p />
        </div>
        <div
          class="map-panel-item"
        >
          <button
            class="el-intent-critical el-button"
            type="button"
          >
            Start Journey
            <div
              class="el-button-loader"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`appointment Apppointment should match snapshot with data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
       
      <div
        class="controls-container"
      >
        <div
          class="controls-title-wrapper"
        >
          <h2
            class="el-has-bold-text el-subtitle"
          >
            Location
          </h2>
          <div
            class="tab-mode-button-container"
          >
            <button
              class="el-intent-primary el-button"
            >
              MAP
              <div
                class="el-button-loader"
              />
            </button>
          </div>
        </div>
        <div
          class="my-location-wrap"
        >
          <div
            class="my-location-inner-wrap"
          >
            <div
              class="my-location-section"
            >
              <input
                class="el-input"
                placeholder="Enter location"
                value=""
              />
            </div>
            <div
              class="destination-location-section"
            />
          </div>
        </div>
      </div>
      <div
        class="appointment-time-container-expanded appointment-time-container"
      >
        <div
          class="el-toggle-full-width el-toggle-radio-wrap"
        >
          <input
            checked=""
            class="el-toggle-radio"
            id="today"
            name="appointment-time"
            type="radio"
            value="TODAY"
          />
          <label
            class="el-toggle-full-width el-toggle-radio-label"
            for="today"
          >
            <span
              class="el-toggle-radio-item"
            >
              Today
            </span>
          </label>
          <input
            class="el-toggle-radio"
            id="tomorrow"
            name="appointment-time"
            type="radio"
            value="TOMORROW"
          />
          <label
            class="el-toggle-full-width el-toggle-radio-label"
            for="tomorrow"
          >
            <span
              class="el-toggle-radio-item"
            >
              Tomorrow
            </span>
          </label>
          <input
            class="el-toggle-radio"
            id="week"
            name="appointment-time"
            type="radio"
            value="WEEK"
          />
          <label
            class="el-toggle-full-width el-toggle-radio-label"
            for="week"
          >
            <span
              class="el-toggle-radio-item"
            >
              Week
            </span>
          </label>
        </div>
      </div>
      <div
        class="mobile-appointments-show appoinment-container"
      >
        <div
          class="el-fade-in"
        >
          <div
            class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-pn-content"
            >
              No appointments
            </div>
          </div>
        </div>
      </div>
      <div
        class="drawer-bg"
      />
      <div
        class="drawer"
      />
      <div
        class="map-container"
      >
        <div
          class="map-content-container"
        />
        <div
          class="map-panel-container"
        >
          <div
            class="map-panel-item"
          >
            <input
              checked=""
              class="toggle-travel-checkbox"
              id="travel-mode"
              type="checkbox"
            />
            <label
              class="toggle-travel-label"
              for="travel-mode"
            >
              <img
                src="[object Object]"
              />
              <img
                src="[object Object]"
              />
            </label>
          </div>
          <div
            class="map-panel-item"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              ETA
            </h2>
            <p />
          </div>
          <div
            class="map-panel-item"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              Distance
            </h2>
            <p />
          </div>
          <div
            class="map-panel-item"
          >
            <button
              class="el-intent-critical el-button"
              type="button"
            >
              Start Journey
              <div
                class="el-button-loader"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
     
    <div
      class="controls-container"
    >
      <div
        class="controls-title-wrapper"
      >
        <h2
          class="el-has-bold-text el-subtitle"
        >
          Location
        </h2>
        <div
          class="tab-mode-button-container"
        >
          <button
            class="el-intent-primary el-button"
          >
            MAP
            <div
              class="el-button-loader"
            />
          </button>
        </div>
      </div>
      <div
        class="my-location-wrap"
      >
        <div
          class="my-location-inner-wrap"
        >
          <div
            class="my-location-section"
          >
            <input
              class="el-input"
              placeholder="Enter location"
              value=""
            />
          </div>
          <div
            class="destination-location-section"
          />
        </div>
      </div>
    </div>
    <div
      class="appointment-time-container-expanded appointment-time-container"
    >
      <div
        class="el-toggle-full-width el-toggle-radio-wrap"
      >
        <input
          checked=""
          class="el-toggle-radio"
          id="today"
          name="appointment-time"
          type="radio"
          value="TODAY"
        />
        <label
          class="el-toggle-full-width el-toggle-radio-label"
          for="today"
        >
          <span
            class="el-toggle-radio-item"
          >
            Today
          </span>
        </label>
        <input
          class="el-toggle-radio"
          id="tomorrow"
          name="appointment-time"
          type="radio"
          value="TOMORROW"
        />
        <label
          class="el-toggle-full-width el-toggle-radio-label"
          for="tomorrow"
        >
          <span
            class="el-toggle-radio-item"
          >
            Tomorrow
          </span>
        </label>
        <input
          class="el-toggle-radio"
          id="week"
          name="appointment-time"
          type="radio"
          value="WEEK"
        />
        <label
          class="el-toggle-full-width el-toggle-radio-label"
          for="week"
        >
          <span
            class="el-toggle-radio-item"
          >
            Week
          </span>
        </label>
      </div>
    </div>
    <div
      class="mobile-appointments-show appoinment-container"
    >
      <div
        class="el-fade-in"
      >
        <div
          class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            No appointments
          </div>
        </div>
      </div>
    </div>
    <div
      class="drawer-bg"
    />
    <div
      class="drawer"
    />
    <div
      class="map-container"
    >
      <div
        class="map-content-container"
      />
      <div
        class="map-panel-container"
      >
        <div
          class="map-panel-item"
        >
          <input
            checked=""
            class="toggle-travel-checkbox"
            id="travel-mode"
            type="checkbox"
          />
          <label
            class="toggle-travel-label"
            for="travel-mode"
          >
            <img
              src="[object Object]"
            />
            <img
              src="[object Object]"
            />
          </label>
        </div>
        <div
          class="map-panel-item"
        >
          <h2
            class="el-has-bold-text el-subtitle"
          >
            ETA
          </h2>
          <p />
        </div>
        <div
          class="map-panel-item"
        >
          <h2
            class="el-has-bold-text el-subtitle"
          >
            Distance
          </h2>
          <p />
        </div>
        <div
          class="map-panel-item"
        >
          <button
            class="el-intent-critical el-button"
            type="button"
          >
            Start Journey
            <div
              class="el-button-loader"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
